# IniFile

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README-EN.md  README.md  README.zh-CN.md  run_valgrind.sh  valgrind_in_bin.sh
.github/workflows/: cmake.yml  cmake_unix.yml  cmake_windows.yml
cmake/: inifileConfig.cmake.in
examples/: CMakeLists.txt  inifile_basic.cpp  inifile_case_insensitive.cpp  inifile_comment.cpp  inifile_custom.cpp  inifile_custom2.cpp  inifile_load.cpp  inifile_read.cpp  inifile_save.cpp  inifile_utility.cpp  inifile_write.cpp  main.cpp
include/: CMakeLists.txt
include/inifile/: inifile.h
tests/: CMakeLists.txt  test01.cpp  test_inifile.cpp
tests/installed_test/: CMakeLists.txt  README.md  main.cpp
